[package]
name = "pullrequest"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "better pull requests"
documentation = "https://docs.rs/crate/ddk"
repository = "https://github.com/bennyhodl/pullrequest"
readme = "./README.md"

[dependencies]
anthropic = "0.0.8"
dotenv = "0.15.0"
inquire = "0.7.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "pullrequest"
path = "./src/main.rs"
